--- a/djangoproject/airport/templates/airport/messages.css
+++ b/djangoproject/airport/templates/airport/messages.css
@@ -8,9 +8,15 @@
     position: absolute;
     bottom: 5px;
     left: 5px;
-    overflow: auto;
+    overflow: hidden;
     font-size: smaller;
     box-shadow: inset 0 2px 6px white, 0 3px 3px rgba(0,0,0,0.6);
+}
+
+#message_box {
+    width: 470px;
+    overflow: auto;
+    height: 115px;
 }
 
 #message_widget ul {
